refactor(core): I18nService graceful missing-key fallback, trim tautological AgentConfig, RedditComment immutability
Behavior-preserving. I18nService now falls back to the key (documented 'never crash' contract) instead of throwing; narrowed broad catches. AgentConfig.resolveEditorialModel collapsed to its only real value. RedditComment defensively copies imageUrls like RedditThread.